# MatchMentor

./: .gitignore  Filip's file.txt  Karin's Label.xlsx  Karin's file is here.txt  MatchMentor.py  README.md  Untitled-1.ipynb  jais_labels.xlsx  pyproject.toml
Labels/: Filips_labels.xlsx  Initial_combined_labels.xlsx
notebooks/: example_labeling_notebook.ipynb  example_model_inference.ipynb  example_model_training.ipynb  example_training_model.ipynb  scratch.ipynb
